# fast_zero

./: .coverage  database.db  pyproject.toml
fast_zero/: app.py
migrations/: env.py
migrations/versions/: 04536818d4cf_created_users_table.py
tests/: test_app.py  test_db.py
